--- a/environment.yml
+++ b/environment.yml
@@ -17,6 +17,7 @@ dependencies:
   - exceptiongroup=1.1.1
   - fastapi=0.95.0
   - gmp=6.2.1
+  - gunicorn=20.1.0
   - h11=0.14.0
   - h2=4.1.0
   - hpack=4.0.0
