--- a/.github/workflows/gatekeeper-build.yml
+++ b/.github/workflows/gatekeeper-build.yml
@@ -34,14 +34,10 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-        #    - name: Test with pytest
-        #run: |
-        #conda install pytest
-        #cd tests
-        #pytest
     - name: Check website status
       run: |
         cp config.py.template config.py
+        sed -i "s/<PATH TO PROJECT ROOT>/${PWD//\//\\/}/" ./config.py
         python main.py&
         sleep 5
         if curl -sSf http://127.0.0.1:8088/ > /dev/null; then
