--- a/deployment/gatekeeper.service
+++ b/deployment/gatekeeper.service
@@ -3,7 +3,7 @@ Description=gunicorn uvicorn service for PASTA Gatekeeper
 After=syslog.target
 
 [Service]
-ExecStart=/home/pasta/miniconda3/envs/gatekeeper/bin/gunicorn -b 127.0.0.1:8088  -w 8 -k uvicorn.workers.UvicornWorker main:app --name gatekeeper --chdir /home/pasta/web-x --access-logfile /home/pasta/Gatekeeper/gatekeeper.log --error-logfile /home/pasta/Gatekeeper/errors.log --user pasta
+ExecStart=/home/pasta/miniconda3/envs/gatekeeper/bin/gunicorn -b 127.0.0.1:8088  -w 8 -k uvicorn.workers.UvicornWorker main:app --name gatekeeper --chdir /home/pasta/Gatekeeper/webapp --access-logfile /home/pasta/Gatekeeper/gatekeeper.log --error-logfile /home/pasta/Gatekeeper/errors.log --user pasta
 
 ExecReload=/bin/kill -s HUP $MAINPID
 KillMode=mixed
