--- a/.github/workflows/gatekeeper-build.yml
+++ b/.github/workflows/gatekeeper-build.yml
@@ -29,11 +29,16 @@ jobs:
         conda env update --file environment-min.yml --name base
     - name: Lint with flake8
       run: |
-        conda install flake8
+        conda install flake8 --solver=classic
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
+      run: |
+        conda install pytest --solver=classic
+        cd tests
+        pytest
     - name: Check website status
       run: |
         cd webapp
