--- a/.github/workflows/gatekeeper-build.yml
+++ b/.github/workflows/gatekeeper-build.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.11
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: '3.11'
     - name: Add conda to system path
@@ -26,7 +26,8 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --file environment-min.yml --name base
+        conda env create --file environment-min.yml --name gatekeeper
+        conda activate gatekeeper
     - name: Lint with flake8
       run: |
         conda install flake8 --solver=classic
