--- a/.github/workflows/gatekeeper-build.yml
+++ b/.github/workflows/gatekeeper-build.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         conda env create --file environment-min.yml --name gatekeeper
+        conda init
         conda activate gatekeeper
     - name: Lint with flake8
       run: |
