--- a/.github/workflows/gatekeeper-build.yml
+++ b/.github/workflows/gatekeeper-build.yml
@@ -26,9 +26,8 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env create --file environment-min.yml --name gatekeeper
-        conda init
-        conda activate gatekeeper
+        conda install -y python=3.11
+        conda env update --file environment-min.yml --name base
     - name: Lint with flake8
       run: |
         conda install flake8 --solver=classic
