Add pytest back into action; add root to systempath

--- a/.github/workflows/gatekeeper-build.yml
+++ b/.github/workflows/gatekeeper-build.yml
@@ -38,7 +38,8 @@ jobs:
     - name: Test with pytest
       run: |
         conda install pytest --solver=classic
-        pytest tests
+        cd tests
+        pytest
     - name: Check website status
       run: |
         cd webapp
