--- a/environment.yml
+++ b/environment.yml
@@ -5,65 +5,67 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - anyio=3.6.2
-  - attrs=22.2.0
-  - black=23.1.0
+  - annotated-types=0.6.0
+  - anyio=4.3.0
+  - black=24.4.0
   - bzip2=1.0.8
-  - ca-certificates=2022.12.7
-  - certifi=2022.12.7
-  - click=8.1.3
+  - ca-certificates=2024.2.2
+  - certifi=2024.2.2
+  - click=8.1.7
   - colorama=0.4.6
   - daiquiri=3.0.0
-  - exceptiongroup=1.1.1
-  - fastapi=0.95.0
-  - gmp=6.2.1
-  - gunicorn=20.1.0
+  - exceptiongroup=1.2.0
+  - fastapi=0.110.1
+  - gmp=6.3.0
+  - gunicorn=22.0.0
   - h11=0.14.0
   - h2=4.1.0
   - hpack=4.0.0
-  - httpcore=0.16.3
-  - httpx=0.23.3
+  - httpcore=1.0.5
+  - httpx=0.27.0
   - hyperframe=6.0.1
-  - idna=3.4
+  - idna=3.7
   - iniconfig=2.0.0
   - ld_impl_linux-64=2.40
+  - libexpat=2.6.2
   - libffi=3.4.2
-  - libgcc-ng=12.2.0
-  - libgomp=12.2.0
-  - libnsl=2.0.0
-  - libsqlite=3.40.0
-  - libstdcxx-ng=12.2.0
-  - libuuid=2.32.1
+  - libgcc-ng=13.2.0
+  - libgomp=13.2.0
+  - libnsl=2.0.1
+  - libsqlite=3.45.2
+  - libstdcxx-ng=13.2.0
+  - libuuid=2.38.1
+  - libxcrypt=4.4.36
   - libzlib=1.2.13
   - mypy_extensions=1.0.0
-  - ncurses=6.3
-  - openssl=3.1.0
-  - packaging=23.0
-  - pathspec=0.11.1
-  - pendulum=2.1.2
-  - pip=23.0.1
-  - platformdirs=3.2.0
-  - pluggy=1.0.0
-  - pycryptodome=3.16.0
-  - pydantic=1.10.7
-  - pytest=7.2.2
-  - python=3.11.0
-  - python-dateutil=2.8.2
+  - ncurses=6.4.20240210
+  - openssl=3.2.1
+  - packaging=24.0
+  - pathspec=0.12.1
+  - pendulum=3.0.0
+  - pip=24.0
+  - platformdirs=4.2.0
+  - pluggy=1.4.0
+  - pycryptodome=3.20.0
+  - pydantic=2.7.0
+  - pydantic-core=2.18.1
+  - pytest=8.1.1
+  - python=3.11.8
+  - python-dateutil=2.9.0
   - python-json-logger=2.0.7
   - python_abi=3.11
-  - pytzdata=2020.1
   - readline=8.2
-  - rfc3986=1.5.0
-  - setuptools=67.6.0
+  - setuptools=69.5.1
   - six=1.16.0
-  - sniffio=1.3.0
-  - starlette=0.26.1
-  - tk=8.6.12
+  - sniffio=1.3.1
+  - starlette=0.37.2
+  - time-machine=2.14.1
+  - tk=8.6.13
   - tomli=2.0.1
-  - typing-extensions=4.5.0
-  - typing_extensions=4.5.0
-  - tzdata=2023b
-  - uvicorn=0.21.1
-  - wheel=0.40.0
+  - typing-extensions=4.11.0
+  - typing_extensions=4.11.0
+  - tzdata=2024a
+  - uvicorn=0.29.0
+  - wheel=0.43.0
   - xz=5.2.6
 prefix: /home/pasta/miniconda3/envs/gatekeeper
