--- a/environment.yml
+++ b/environment.yml
@@ -5,17 +5,21 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - annotated-types=0.6.0
-  - anyio=4.3.0
-  - black=24.4.0
+  - annotated-types=0.7.0
+  - anyio=4.4.0
+  - black=24.4.2
   - bzip2=1.0.8
-  - ca-certificates=2024.2.2
-  - certifi=2024.2.2
+  - ca-certificates=2024.7.4
+  - certifi=2024.7.4
   - click=8.1.7
   - colorama=0.4.6
   - daiquiri=3.0.0
-  - exceptiongroup=1.2.0
-  - fastapi=0.110.1
+  - dnspython=2.6.1
+  - email-validator=2.2.0
+  - email_validator=2.2.0
+  - exceptiongroup=1.2.2
+  - fastapi=0.112.0
+  - fastapi-cli=0.0.5
   - gmp=6.3.0
   - gunicorn=22.0.0
   - h11=0.14.0
@@ -26,46 +30,57 @@ dependencies:
   - hyperframe=6.0.1
   - idna=3.7
   - iniconfig=2.0.0
+  - jinja2=3.1.4
   - ld_impl_linux-64=2.40
   - libexpat=2.6.2
   - libffi=3.4.2
-  - libgcc-ng=13.2.0
-  - libgomp=13.2.0
+  - libgcc-ng=14.1.0
+  - libgomp=14.1.0
   - libnsl=2.0.1
-  - libsqlite=3.45.2
-  - libstdcxx-ng=13.2.0
+  - libsqlite=3.46.0
+  - libstdcxx-ng=14.1.0
   - libuuid=2.38.1
   - libxcrypt=4.4.36
-  - libzlib=1.2.13
+  - libzlib=1.3.1
+  - markdown-it-py=3.0.0
+  - markupsafe=2.1.5
+  - mdurl=0.1.2
   - mypy_extensions=1.0.0
-  - ncurses=6.4.20240210
-  - openssl=3.2.1
-  - packaging=24.0
+  - ncurses=6.5
+  - openssl=3.3.1
+  - packaging=24.1
   - pathspec=0.12.1
   - pendulum=3.0.0
-  - pip=24.0
-  - platformdirs=4.2.0
-  - pluggy=1.4.0
+  - pip=24.2
+  - platformdirs=4.2.2
+  - pluggy=1.5.0
   - pycryptodome=3.20.0
-  - pydantic=2.7.0
-  - pydantic-core=2.18.1
-  - pytest=8.1.1
-  - python=3.11.8
+  - pydantic=2.8.2
+  - pydantic-core=2.20.1
+  - pygments=2.18.0
+  - pytest=8.3.2
+  - python=3.11.9
   - python-dateutil=2.9.0
   - python-json-logger=2.0.7
+  - python-multipart=0.0.9
   - python_abi=3.11
   - readline=8.2
-  - setuptools=69.5.1
+  - rich=13.7.1
+  - setuptools=72.1.0
+  - shellingham=1.5.4
   - six=1.16.0
   - sniffio=1.3.1
   - starlette=0.37.2
-  - time-machine=2.14.1
+  - time-machine=2.14.2
   - tk=8.6.13
   - tomli=2.0.1
-  - typing-extensions=4.11.0
-  - typing_extensions=4.11.0
+  - typer=0.12.3
+  - typer-slim=0.12.3
+  - typer-slim-standard=0.12.3
+  - typing-extensions=4.12.2
+  - typing_extensions=4.12.2
   - tzdata=2024a
-  - uvicorn=0.29.0
+  - uvicorn=0.30.4
   - wheel=0.43.0
   - xz=5.2.6
 prefix: /home/pasta/miniconda3/envs/gatekeeper
