--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: gatekeeper
+name: gatekeeper-dev
 channels:
   - conda-forge
   - defaults
@@ -7,7 +7,7 @@ dependencies:
   - _openmp_mutex=4.5
   - annotated-types=0.7.0
   - anyio=4.4.0
-  - black=24.4.2
+  - black=24.8.0
   - bzip2=1.0.8
   - ca-certificates=2024.7.4
   - certifi=2024.7.4
@@ -18,10 +18,10 @@ dependencies:
   - email-validator=2.2.0
   - email_validator=2.2.0
   - exceptiongroup=1.2.2
-  - fastapi=0.112.0
+  - fastapi=0.112.1
   - fastapi-cli=0.0.5
   - gmp=6.3.0
-  - gunicorn=22.0.0
+  - gunicorn=23.0.0
   - h11=0.14.0
   - h2=4.1.0
   - hpack=4.0.0
@@ -59,28 +59,28 @@ dependencies:
   - pydantic-core=2.20.1
   - pygments=2.18.0
   - pytest=8.3.2
-  - python=3.11.9
+  - python=3.12.5
   - python-dateutil=2.9.0
   - python-json-logger=2.0.7
   - python-multipart=0.0.9
-  - python_abi=3.11
+  - python_abi=3.12
   - readline=8.2
   - rich=13.7.1
-  - setuptools=72.1.0
+  - setuptools=72.2.0
   - shellingham=1.5.4
   - six=1.16.0
   - sniffio=1.3.1
-  - starlette=0.37.2
-  - time-machine=2.14.2
+  - starlette=0.38.2
+  - time-machine=2.15.0
   - tk=8.6.13
   - tomli=2.0.1
-  - typer=0.12.3
-  - typer-slim=0.12.3
-  - typer-slim-standard=0.12.3
+  - typer=0.12.4
+  - typer-slim=0.12.4
+  - typer-slim-standard=0.12.4
   - typing-extensions=4.12.2
   - typing_extensions=4.12.2
   - tzdata=2024a
-  - uvicorn=0.30.4
-  - wheel=0.43.0
+  - uvicorn=0.30.6
+  - wheel=0.44.0
   - xz=5.2.6
-prefix: /home/pasta/miniconda3/envs/gatekeeper
+prefix: /home/servilla/miniconda3/envs/gatekeeper-dev
