--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: gatekeeper-dev
+name: gatekeeper
 channels:
   - conda-forge
   - defaults
@@ -6,81 +6,92 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - annotated-types=0.7.0
-  - anyio=4.4.0
-  - black=24.8.0
+  - anyio=4.6.2.post1
+  - black=24.10.0
   - bzip2=1.0.8
-  - ca-certificates=2024.7.4
-  - certifi=2024.7.4
+  - ca-certificates=2024.8.30
+  - certifi=2024.8.30
   - click=8.1.7
   - colorama=0.4.6
   - daiquiri=3.0.0
-  - dnspython=2.6.1
+  - dnspython=2.7.0
   - email-validator=2.2.0
   - email_validator=2.2.0
   - exceptiongroup=1.2.2
-  - fastapi=0.112.1
+  - fastapi=0.115.2
   - fastapi-cli=0.0.5
   - gmp=6.3.0
   - gunicorn=23.0.0
   - h11=0.14.0
   - h2=4.1.0
   - hpack=4.0.0
-  - httpcore=1.0.5
-  - httpx=0.27.0
+  - httpcore=1.0.6
+  - httptools=0.6.1
+  - httpx=0.27.2
   - hyperframe=6.0.1
-  - idna=3.7
+  - idna=3.10
   - iniconfig=2.0.0
   - jinja2=3.1.4
-  - ld_impl_linux-64=2.40
-  - libexpat=2.6.2
+  - ld_impl_linux-64=2.43
+  - libexpat=2.6.3
   - libffi=3.4.2
-  - libgcc-ng=14.1.0
-  - libgomp=14.1.0
+  - libgcc=14.2.0
+  - libgcc-ng=14.2.0
+  - libgomp=14.2.0
   - libnsl=2.0.1
-  - libsqlite=3.46.0
-  - libstdcxx-ng=14.1.0
+  - libsqlite=3.46.1
+  - libstdcxx=14.2.0
+  - libstdcxx-ng=14.2.0
   - libuuid=2.38.1
+  - libuv=1.49.1
   - libxcrypt=4.4.36
   - libzlib=1.3.1
   - markdown-it-py=3.0.0
-  - markupsafe=2.1.5
+  - markupsafe=3.0.1
   - mdurl=0.1.2
   - mypy_extensions=1.0.0
   - ncurses=6.5
-  - openssl=3.3.1
+  - openssl=3.3.2
   - packaging=24.1
   - pathspec=0.12.1
   - pendulum=3.0.0
   - pip=24.2
-  - platformdirs=4.2.2
+  - platformdirs=4.3.6
   - pluggy=1.5.0
   - pycryptodome=3.20.0
-  - pydantic=2.8.2
-  - pydantic-core=2.20.1
+  - pydantic=2.9.2
+  - pydantic-core=2.23.4
   - pygments=2.18.0
-  - pytest=8.3.2
-  - python=3.12.5
+  - pytest=8.3.3
+  - python=3.12.7
   - python-dateutil=2.9.0
+  - python-dotenv=1.0.1
   - python-json-logger=2.0.7
-  - python-multipart=0.0.9
+  - python-multipart=0.0.12
   - python_abi=3.12
+  - pyyaml=6.0.2
   - readline=8.2
-  - rich=13.7.1
-  - setuptools=72.2.0
+  - rich=13.9.2
+  - setuptools=75.1.0
   - shellingham=1.5.4
   - six=1.16.0
   - sniffio=1.3.1
-  - starlette=0.38.2
-  - time-machine=2.15.0
+  - starlette=0.40.0
+  - time-machine=2.16.0
   - tk=8.6.13
-  - tomli=2.0.1
-  - typer=0.12.4
-  - typer-slim=0.12.4
-  - typer-slim-standard=0.12.4
+  - tomli=2.0.2
+  - typer=0.12.5
+  - typer-slim=0.12.5
+  - typer-slim-standard=0.12.5
   - typing-extensions=4.12.2
   - typing_extensions=4.12.2
-  - tzdata=2024a
-  - uvicorn=0.30.6
+  - tzdata=2024b
+  - uvicorn=0.32.0
+  - uvicorn-standard=0.32.0
+  - uvloop=0.21.0
+  - watchfiles=0.24.0
+  - websockets=13.1
   - wheel=0.44.0
   - xz=5.2.6
-prefix: /home/servilla/miniconda3/envs/gatekeeper-dev
+  - yaml=0.2.5
+prefix: /home/pasta/miniconda3/envs/gatekeeper
