--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,59 @@
 annotated-types==0.7.0
-anyio==4.4.0
-black==24.8.0
-certifi==2024.7.4
+anyio==4.6.2.post1
+black==24.10.0
+certifi==2024.8.30
 click==8.1.7
 colorama==0.4.6
 daiquiri==3.0.0
-dnspython==2.6.1
+dnspython==2.7.0
 email_validator==2.2.0
 exceptiongroup==1.2.2
-fastapi==0.112.1
+fastapi==0.115.2
 fastapi-cli==0.0.5
 gunicorn==23.0.0
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
-httpcore==1.0.5
-httpx==0.27.0
+httpcore==1.0.6
+httptools==0.6.1
+httpx==0.27.2
 hyperframe==6.0.1
-idna==3.7
+idna==3.10
 iniconfig==2.0.0
 Jinja2==3.1.4
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+MarkupSafe==3.0.1
 mdurl==0.1.2
 mypy-extensions==1.0.0
 packaging==24.1
 pathspec==0.12.1
 pendulum==3.0.0
 pip==24.2
-platformdirs==4.2.2
+platformdirs==4.3.6
 pluggy==1.5.0
 pycryptodome==3.20.0
-pydantic==2.8.2
-pydantic_core==2.20.1
+pydantic==2.9.2
+pydantic_core==2.23.4
 Pygments==2.18.0
-pytest==8.3.2
+pytest==8.3.3
 python-dateutil==2.9.0
+python-dotenv==1.0.1
 python-json-logger==2.0.7
-python-multipart==0.0.9
-rich==13.7.1
-setuptools==72.2.0
+python-multipart==0.0.12
+PyYAML==6.0.2
+rich==13.9.2
+setuptools==75.1.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
-starlette==0.38.2
-time-machine==2.15.0
-tomli==2.0.1
-typer==0.12.4
-typer-slim==0.12.4
+starlette==0.40.0
+time-machine==2.16.0
+tomli==2.0.2
+typer==0.12.5
+typer-slim==0.12.5
 typing_extensions==4.12.2
-uvicorn==0.30.6
+uvicorn==0.32.0
+uvloop==0.21.0
+watchfiles==0.24.0
+websockets==13.1
 wheel==0.44.0
