--- a/environment.yml
+++ b/environment.yml
@@ -18,80 +18,84 @@ dependencies:
   - email-validator=2.2.0
   - email_validator=2.2.0
   - exceptiongroup=1.2.2
-  - fastapi=0.115.2
+  - fastapi=0.115.5
   - fastapi-cli=0.0.5
   - gmp=6.3.0
   - gunicorn=23.0.0
   - h11=0.14.0
   - h2=4.1.0
   - hpack=4.0.0
-  - httpcore=1.0.6
-  - httptools=0.6.1
-  - httpx=0.27.2
+  - httpcore=1.0.7
+  - httptools=0.6.4
+  - httpx=0.28.0
   - hyperframe=6.0.1
   - idna=3.10
   - iniconfig=2.0.0
   - jinja2=3.1.4
   - ld_impl_linux-64=2.43
-  - libexpat=2.6.3
+  - libexpat=2.6.4
   - libffi=3.4.2
   - libgcc=14.2.0
   - libgcc-ng=14.2.0
   - libgomp=14.2.0
+  - liblzma=5.6.3
+  - liblzma-devel=5.6.3
   - libnsl=2.0.1
-  - libsqlite=3.46.1
+  - libsqlite=3.47.0
   - libstdcxx=14.2.0
   - libstdcxx-ng=14.2.0
   - libuuid=2.38.1
-  - libuv=1.49.1
+  - libuv=1.49.2
   - libxcrypt=4.4.36
   - libzlib=1.3.1
   - markdown-it-py=3.0.0
-  - markupsafe=3.0.1
+  - markupsafe=3.0.2
   - mdurl=0.1.2
   - mypy_extensions=1.0.0
   - ncurses=6.5
-  - openssl=3.3.2
-  - packaging=24.1
+  - openssl=3.4.0
+  - packaging=24.2
   - pathspec=0.12.1
   - pendulum=3.0.0
-  - pip=24.2
+  - pip=24.3.1
   - platformdirs=4.3.6
   - pluggy=1.5.0
-  - pycryptodome=3.20.0
-  - pydantic=2.9.2
-  - pydantic-core=2.23.4
+  - pycryptodome=3.21.0
+  - pydantic=2.10.3
+  - pydantic-core=2.27.1
   - pygments=2.18.0
-  - pytest=8.3.3
+  - pytest=8.3.4
   - python=3.12.7
-  - python-dateutil=2.9.0
+  - python-dateutil=2.9.0.post0
   - python-dotenv=1.0.1
   - python-json-logger=2.0.7
-  - python-multipart=0.0.12
+  - python-multipart=0.0.19
   - python_abi=3.12
   - pyyaml=6.0.2
   - readline=8.2
-  - rich=13.9.2
-  - setuptools=75.1.0
+  - rich=13.9.4
+  - setuptools=75.6.0
   - shellingham=1.5.4
   - six=1.16.0
   - sniffio=1.3.1
-  - starlette=0.40.0
+  - starlette=0.41.3
   - time-machine=2.16.0
   - tk=8.6.13
-  - tomli=2.0.2
-  - typer=0.12.5
-  - typer-slim=0.12.5
-  - typer-slim-standard=0.12.5
+  - tomli=2.2.1
+  - typer=0.15.0
+  - typer-slim=0.15.0
+  - typer-slim-standard=0.15.0
   - typing-extensions=4.12.2
   - typing_extensions=4.12.2
   - tzdata=2024b
-  - uvicorn=0.32.0
-  - uvicorn-standard=0.32.0
+  - uvicorn=0.32.1
+  - uvicorn-standard=0.32.1
   - uvloop=0.21.0
-  - watchfiles=0.24.0
-  - websockets=13.1
-  - wheel=0.44.0
-  - xz=5.2.6
+  - watchfiles=1.0.0
+  - websockets=14.1
+  - wheel=0.45.1
+  - xz=5.6.3
+  - xz-gpl-tools=5.6.3
+  - xz-tools=5.6.3
   - yaml=0.2.5
 prefix: /home/pasta/miniconda3/envs/gatekeeper
