--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,53 @@
 annotated-types==0.7.0
-anyio==4.6.2.post1
-black==24.10.0
-certifi==2024.8.30
+anyio==4.4.0
+black==24.4.2
+certifi==2025.1.31
 click==8.1.7
 colorama==0.4.6
 daiquiri==3.0.0
-dnspython==2.7.0
+dnspython==2.6.1
 email_validator==2.2.0
 exceptiongroup==1.2.2
-fastapi==0.115.5
+fastapi==0.112.0
 fastapi-cli==0.0.5
-gunicorn==23.0.0
-h11==0.14.0
+gunicorn==22.0.0
+h11==0.16.0
 h2==4.1.0
 hpack==4.0.0
-httpcore==1.0.7
-httptools==0.6.4
-httpx==0.28.0
+httpcore==1.0.9
+httpx==0.27.0
 hyperframe==6.0.1
-idna==3.10
+idna==3.7
 iniconfig==2.0.0
 Jinja2==3.1.4
 markdown-it-py==3.0.0
-MarkupSafe==3.0.2
+MarkupSafe==2.1.5
 mdurl==0.1.2
-mypy_extensions==1.0.0
-packaging==24.2
+mypy-extensions==1.0.0
+packaging==24.1
 pathspec==0.12.1
 pendulum==3.0.0
-pip==24.3.1
-platformdirs==4.3.6
+pip==24.2
+platformdirs==4.2.2
 pluggy==1.5.0
-pycryptodome==3.21.0
-pydantic==2.10.3
-pydantic_core==2.27.1
+pycryptodome==3.20.0
+pydantic==2.8.2
+pydantic_core==2.20.1
 Pygments==2.18.0
-pytest==8.3.4
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
+pytest==8.3.2
+python-dateutil==2.9.0
 python-json-logger==2.0.7
-python-multipart==0.0.19
-PyYAML==6.0.2
-rich==13.9.4
-setuptools==75.6.0
+python-multipart==0.0.9
+rich==13.7.1
+setuptools==72.1.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
-starlette==0.41.3
-time-machine==2.16.0
-tomli==2.2.1
-typer==0.15.0
-typer-slim==0.15.0
+starlette==0.37.2
+time-machine==2.14.2
+tomli==2.0.1
+typer==0.12.3
+typer-slim==0.12.3
 typing_extensions==4.12.2
-uvicorn==0.32.1
-uvloop==0.21.0
-watchfiles==1.0.0
-websockets==14.1
-wheel==0.45.1
+uvicorn==0.30.4
+wheel==0.43.0
