--- a/environment.yml
+++ b/environment.yml
@@ -6,83 +6,94 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - annotated-types=0.7.0
-  - anyio=4.4.0
-  - black=24.4.2
+  - anyio=4.9.0
+  - black=25.1.0
   - bzip2=1.0.8
   - ca-certificates=2025.4.26
   - certifi=2025.1.31
-  - click=8.1.7
+  - click=8.1.8
   - colorama=0.4.6
   - daiquiri=3.0.0
-  - dnspython=2.6.1
+  - dnspython=2.7.0
   - email-validator=2.2.0
   - email_validator=2.2.0
   - exceptiongroup=1.2.2
-  - fastapi=0.112.0
-  - fastapi-cli=0.0.5
+  - fastapi=0.115.12
+  - fastapi-cli=0.0.7
   - gmp=6.3.0
-  - gunicorn=22.0.0
+  - gunicorn=23.0.0
   - h11=0.16.0
-  - h2=4.1.0
-  - hpack=4.0.0
+  - h2=4.2.0
+  - hpack=4.1.0
   - httpcore=1.0.9
-  - httpx=0.27.0
-  - hyperframe=6.0.1
-  - idna=3.7
+  - httptools=0.6.4
+  - httpx=0.28.1
+  - hyperframe=6.1.0
+  - idna=3.10
   - iniconfig=2.0.0
-  - jinja2=3.1.4
-  - ld_impl_linux-64=2.40
-  - libexpat=2.6.2
-  - libffi=3.4.2
+  - jinja2=3.1.6
+  - ld_impl_linux-64=2.43
+  - libexpat=2.7.0
+  - libffi=3.4.6
   - libgcc=14.2.0
   - libgcc-ng=14.2.0
   - libgomp=14.2.0
+  - liblzma=5.8.1
   - libnsl=2.0.1
-  - libsqlite=3.46.0
+  - libsqlite=3.49.1
   - libstdcxx=14.2.0
   - libstdcxx-ng=14.2.0
   - libuuid=2.38.1
+  - libuv=1.50.0
   - libxcrypt=4.4.36
   - libzlib=1.3.1
   - markdown-it-py=3.0.0
-  - markupsafe=2.1.5
+  - markupsafe=3.0.2
   - mdurl=0.1.2
-  - mypy_extensions=1.0.0
+  - mypy_extensions=1.1.0
   - ncurses=6.5
   - openssl=3.5.0
-  - packaging=24.1
+  - packaging=25.0
   - pathspec=0.12.1
-  - pendulum=3.0.0
-  - pip=24.2
-  - platformdirs=4.2.2
+  - pendulum=3.1.0
+  - pip=25.1
+  - platformdirs=4.3.7
   - pluggy=1.5.0
-  - pycryptodome=3.20.0
-  - pydantic=2.8.2
-  - pydantic-core=2.20.1
-  - pygments=2.18.0
-  - pytest=8.3.2
-  - python=3.11.9
-  - python-dateutil=2.9.0
+  - pycryptodome=3.22.0
+  - pydantic=2.11.3
+  - pydantic-core=2.33.1
+  - pygments=2.19.1
+  - pytest=8.3.5
+  - python=3.12.10
+  - python-dateutil=2.9.0.post0
+  - python-dotenv=1.1.0
   - python-json-logger=2.0.7
-  - python-multipart=0.0.9
-  - python_abi=3.11
+  - python-multipart=0.0.20
+  - python_abi=3.12
+  - pyyaml=6.0.2
   - readline=8.2
-  - rich=13.7.1
-  - setuptools=72.1.0
+  - rich=14.0.0
+  - rich-toolkit=0.11.3
+  - setuptools=79.0.1
   - shellingham=1.5.4
-  - six=1.16.0
+  - six=1.17.0
   - sniffio=1.3.1
-  - starlette=0.37.2
-  - time-machine=2.14.2
+  - starlette=0.46.2
+  - time-machine=2.16.0
   - tk=8.6.13
-  - tomli=2.0.1
-  - typer=0.12.3
-  - typer-slim=0.12.3
-  - typer-slim-standard=0.12.3
-  - typing-extensions=4.12.2
-  - typing_extensions=4.12.2
-  - tzdata=2024a
-  - uvicorn=0.30.4
-  - wheel=0.43.0
-  - xz=5.2.6
+  - tomli=2.2.1
+  - typer=0.15.3
+  - typer-slim=0.15.3
+  - typer-slim-standard=0.15.3
+  - typing-extensions=4.13.2
+  - typing-inspection=0.4.0
+  - typing_extensions=4.13.2
+  - tzdata=2025b
+  - uvicorn=0.34.2
+  - uvicorn-standard=0.34.2
+  - uvloop=0.21.0
+  - watchfiles=1.0.5
+  - websockets=15.0.1
+  - wheel=0.45.1
+  - yaml=0.2.5
 prefix: /home/pasta/miniconda3/envs/gatekeeper
