Add support for local CA file (#9)

--- a/webapp/config.py.template
+++ b/webapp/config.py.template
@@ -35,6 +35,7 @@ class Config:
 
     # EDI Authentication service
     AUTH = "AUTHENTICATION SERVICE ENDPOINT"
+    CAFILE = None
 
     # Key attributes
     PUBLIC_KEY = "<PATH TO PROJECT ROOT>/keys/<PUBLIC KEY>"
