--- a/webapp/config.py.template
+++ b/webapp/config.py.template
@@ -35,7 +35,7 @@ class Config:
 
     # EDI Authentication service
     AUTH = "AUTHENTICATION SERVICE ENDPOINT"
-    CAFILE = None
+    CA_FILE = None
 
     # Key attributes
     PUBLIC_KEY = "<PATH TO PROJECT ROOT>/keys/<PUBLIC KEY>"
