--- a/environment.yml
+++ b/environment.yml
@@ -6,11 +6,11 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - annotated-types=0.7.0
-  - anyio=4.9.0
+  - anyio=4.10.0
   - black=25.1.0
   - bzip2=1.0.8
-  - ca-certificates=2025.6.15
-  - certifi=2025.6.15
+  - ca-certificates=2025.8.3
+  - certifi=2025.8.3
   - click=8.2.1
   - colorama=0.4.6
   - daiquiri=3.0.0
@@ -18,8 +18,9 @@ dependencies:
   - email-validator=2.2.0
   - email_validator=2.2.0
   - exceptiongroup=1.3.0
-  - fastapi=0.115.13
-  - fastapi-cli=0.0.7
+  - fastapi=0.116.1
+  - fastapi-cli=0.0.8
+  - fastapi-core=0.116.1
   - gmp=6.3.0
   - gunicorn=23.0.0
   - h11=0.16.0
@@ -32,15 +33,15 @@ dependencies:
   - idna=3.10
   - iniconfig=2.0.0
   - jinja2=3.1.6
-  - ld_impl_linux-64=2.43
-  - libexpat=2.7.0
+  - ld_impl_linux-64=2.44
+  - libexpat=2.7.1
   - libffi=3.4.6
   - libgcc=15.1.0
   - libgcc-ng=15.1.0
   - libgomp=15.1.0
   - liblzma=5.8.1
   - libnsl=2.0.1
-  - libsqlite=3.50.1
+  - libsqlite=3.50.4
   - libstdcxx=15.1.0
   - libstdcxx-ng=15.1.0
   - libuuid=2.38.1
@@ -52,45 +53,45 @@ dependencies:
   - mdurl=0.1.2
   - mypy_extensions=1.1.0
   - ncurses=6.5
-  - openssl=3.5.0
+  - openssl=3.5.2
   - packaging=25.0
   - pathspec=0.12.1
   - pendulum=3.1.0
-  - pip=25.1.1
+  - pip=25.2
   - platformdirs=4.3.8
   - pluggy=1.6.0
   - pycryptodome=3.23.0
   - pydantic=2.11.7
   - pydantic-core=2.33.2
-  - pygments=2.19.1
-  - pytest=8.4.0
+  - pygments=2.19.2
+  - pytest=8.4.1
   - python=3.12.11
   - python-dateutil=2.9.0.post0
-  - python-dotenv=1.1.0
+  - python-dotenv=1.1.1
   - python-json-logger=2.0.7
   - python-multipart=0.0.20
   - python_abi=3.12
   - pyyaml=6.0.2
   - readline=8.2
-  - rich=14.0.0
-  - rich-toolkit=0.11.3
+  - rich=14.1.0
+  - rich-toolkit=0.14.9
   - setuptools=80.9.0
   - shellingham=1.5.4
   - six=1.17.0
   - sniffio=1.3.1
-  - starlette=0.46.2
-  - time-machine=2.16.0
+  - starlette=0.47.2
+  - time-machine=2.17.0
   - tk=8.6.13
   - tomli=2.2.1
   - typer=0.16.0
   - typer-slim=0.16.0
   - typer-slim-standard=0.16.0
-  - typing-extensions=4.14.0
+  - typing-extensions=4.14.1
   - typing-inspection=0.4.1
-  - typing_extensions=4.14.0
+  - typing_extensions=4.14.1
   - tzdata=2025b
-  - uvicorn=0.34.3
-  - uvicorn-standard=0.34.3
+  - uvicorn=0.35.0
+  - uvicorn-standard=0.35.0
   - uvloop=0.21.0
   - watchfiles=1.1.0
   - websockets=15.0.1
