--- a/webapp/config.py.template
+++ b/webapp/config.py.template
@@ -33,8 +33,8 @@ class Config:
     TTL = 28800000
 
     # PASTA service endpoints
-    PACKAGE = f"<PACKAGE HOST>/package/"
-    AUDIT = f"<AUDIT HOST>/audit/"
+    PACKAGE = f"<PACKAGE HOST>"
+    AUDIT = f"<AUDIT HOST>"
 
     # EDI Authentication service
     AUTH = "AUTHENTICATION SERVICE ENDPOINT"
