Add iam-lib for interacting with EDI IAM service

--- a/environment-min.yml
+++ b/environment-min.yml
@@ -14,4 +14,7 @@ dependencies:
   - pendulum
   - pycryptodome
   - gunicorn
+  - pip
+  - pip:
+      - git+https://github.com/PASTAplus/iam-lib
 prefix: /home/pasta/miniconda3/envs/gatekeeper
