--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,14 @@ certifi==2025.8.3
 click==8.2.1
 colorama==0.4.6
 daiquiri==3.0.0
-dnspython==2.7.0
-email_validator==2.2.0
+dnspython==2.8.0
+email-validator==2.3.0
 exceptiongroup==1.3.0
-fastapi==0.116.1
-fastapi-cli==0.0.8
+fastapi==0.116.2
+fastapi-cli==0.0.12
 gunicorn==23.0.0
 h11==0.16.0
-h2==4.2.0
+h2==4.3.0
 hpack==4.1.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -21,7 +21,7 @@ hyperframe==6.1.0
 idna==3.10
 iniconfig==2.0.0
 Jinja2==3.1.6
-markdown-it-py==3.0.0
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mypy_extensions==1.1.0
@@ -29,30 +29,30 @@ packaging==25.0
 pathspec==0.12.1
 pendulum==3.1.0
 pip==25.2
-platformdirs==4.3.8
+platformdirs==4.4.0
 pluggy==1.6.0
 pycryptodome==3.23.0
-pydantic==2.11.7
+pydantic==2.11.9
 pydantic_core==2.33.2
 Pygments==2.19.2
-pytest==8.4.1
+pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-json-logger==2.0.7
 python-multipart==0.0.20
 PyYAML==6.0.2
 rich==14.1.0
-rich-toolkit==0.14.9
+rich-toolkit==0.15.1
 setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
-starlette==0.47.2
-time-machine==2.17.0
+starlette==0.48.0
+time-machine==2.19.0
 tomli==2.2.1
-typer==0.16.0
-typer-slim==0.16.0
-typing_extensions==4.14.1
+typer==0.17.4
+typer-slim==0.17.4
+typing_extensions==4.15.0
 typing-inspection==0.4.1
 uvicorn==0.35.0
 uvloop==0.21.0
