--- a/environment-min.yml
+++ b/environment-min.yml
@@ -4,7 +4,7 @@ channels:
   - defaults
 dependencies:
   - daiquiri
-  - uvicorn
+  - uvicorn<=0.35.0
   - python=3.12
   - pytest
   - pytest-asyncio
